# app12.0

./: CMakeLists.txt  Main.qml  cloudmanager.cpp  cloudmanager.h  main.cpp
.github/workflows/: main.yml
qtmqtt/: .tag  dependencies.yaml
qtmqtt/coin/: module_config.yaml
